ลบไฟล์ CORS แล้วมารวม