@@ -2,12 +2,15 @@ package com.example.backend.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 
 import java.util.Arrays;
 import java.util.List;
@@ -19,17 +22,12 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-            // 1. ปิด CSRF เพื่อให้ Login ผ่าน API ได้
             .csrf(csrf -> csrf.disable())
-            
-            // 2. เปิด CORS โดยใช้ Config ด้านล่าง
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-            
-            // 3. ตั้งค่าการเข้าถึง URL
             .authorizeHttpRequests(auth -> auth
-                // อนุญาตให้เข้า /api/auth/... และ /api/public/... ได้โดยไม่ต้อง Login
                 .requestMatchers("/api/auth/**", "/api/public/**").permitAll()
-                // หน้าอื่นๆ ต้อง Login ก่อน
+                .requestMatchers("/error").permitAll()
+                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                 .anyRequest().authenticated()
             );
 
@@ -40,18 +38,30 @@ public class SecurityConfig {
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         
-        // อนุญาตให้ Frontend เข้าถึงได้ (ทั้ง Local และ Zeabur)
+        // ✅ เอา IP ทั้งหมดของคุณมารวมไว้ตรงนี้ครับ
         configuration.setAllowedOrigins(Arrays.asList(
-            "http://localhost:5173",
-            "https://bofwant5000bath.zeabur.app" // โดเมน Frontend ของคุณ
+            "http://localhost:5173",              // Dev (Vite)
+            "https://bofwant5000bath.zeabur.app", // Production (Zeabur)
+            "http://localhost:30080",             // K8s Local
+            "http://192.168.43.60:30080",         // IP Fah
+            "http://192.168.43.227:30080",        // IP Bell
+            "http://172.20.10.2:30080"            // IP Other
         ));
         
+        // แถม: ถ้าอยากให้ชัวร์สุดๆ ว่าไม่ติด CORS แน่ๆ ในช่วง Dev ให้เปิดบรรทัดนี้ด้วย (มันจะอนุญาตทั้งหมด)
+        // configuration.setAllowedOriginPatterns(List.of("*")); 
+
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
-        configuration.setAllowCredentials(true); // อนุญาตให้ส่ง Cookies/Auth Headers ได้
+        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
+    }
+
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
     }
 }
